--- a/src/components/CreateEventForm/CreateEventForm.css
+++ b/src/components/CreateEventForm/CreateEventForm.css
@@ -1,3 +1,62 @@
 .CreateEventForm {
+  max-width: 480px;
+  margin: 50px auto;
+}
 
+
+
+.EventCard {
+  border-radius: 3px;
+  box-shadow: 0px 1px 5px 0.5px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+.EventCard__title {
+  display: flex;
+  flex-direction: column;
+}
+.EventCard__title__input {
+  flex-basis: 100%;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  word-spacing: 0.5px;
+  padding: 35px 25px 15px 25px;
+  border: 0px;
+  outline: 0px;
+  box-shadow: 0px 27px 0px -25px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  transition: box-shadow 0.15s ease-in-out 0s;
+}
+.EventCard__title__input:focus {
+  box-shadow: 0px 3px 0px 0px rgba(30, 144, 255, 1.0);
+}
+
+
+.EventCard__action {
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 25px 25px 25px;
+}
+.EventCard__action__button {
+  padding: 10px 15px;
+  border-radius: 3px;
+  background-color: dodgerblue;
+  cursor: pointer;
+}
+.EventCard__action__button > .text {
+  color: #fff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  word-spacing: 0.5px;
+}
+.EventCard__action__button > .icon {
+  display: none;
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
