--- a/src/components/CreateEventForm/CreateEventForm.css
+++ b/src/components/CreateEventForm/CreateEventForm.css
@@ -5,27 +5,26 @@
 
 
 .EventCard {
+  position: relative;
   border-radius: 5px;
   box-shadow: 0px 1px 5px 0.5px rgba(0, 0, 0, 0.1);
   margin: 50px 5px;
   background-color: #fff;
   overflow: hidden;
 }
+
 .EventCard__title {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-}
-.EventCard__title__label {
-  color: #e91e63;
-  font-size: 16px;
+  color: #000;
+  font-size: 22px;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   letter-spacing: 0.25px;
   word-spacing: 0.25px;
-  margin: 25px 0px 0px 25px;
+  padding: 25px 25px 15px 25px;
+  border-bottom: 1px solid #e5e5e5;
 }
-.EventCard__title__input {
+
+/* .EventCard__title__input {
   width: calc(100% - 50px);
   flex-basis: 100%;
   font-size: 20px;
@@ -43,16 +42,26 @@
 textarea.EventCard__title__input {
   height: 25px;
   min-height: 25px;
-  resize: vertical;
+  resize: none;
 }
 .EventCard__title__input:focus {
   box-shadow: 0px 27px 0px -24px rgba(30, 144, 255, 1.0);
-  /* box-shadow: 0px 3px 0px 0px rgba(30, 144, 255, 1.0); */
-}
+} */
 
 
 .EventCard__row {
-  display: flex;
+  padding: 25px; 
+}
+.EventCard__button {
+  color: dodgerblue;
+  color: blue;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  padding: 10px 0px;
+  border-radius: 5px;
+  /* background-color: #f5f5f5; */
+  cursor: pointer;
 }
 
 
@@ -98,16 +107,17 @@ textarea.EventCard__title__input {
 .EventCard__action {
   position: relative;
   display: flex;
-  /* display: none; */
   justify-content: flex-end;
   align-items: center;
-  padding: 0px 0px 0px 25px;
+  padding: 25px;
   margin-top: 75px;
+  z-index: 1;
 }
 .EventCard__action__button {
   padding: 15px 25px;
   border-radius: 3px;
   cursor: pointer;
+  z-index: 1;
 }
 .EventCard__action__button:active {
   background-color: #fafafa;
@@ -117,7 +127,7 @@ textarea.EventCard__title__input {
 }
 .EventCard__action__button > .text {
   color: #fff;
-  font-size: 16px;
+  font-size: 18px;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   letter-spacing: 0.25px;
@@ -125,8 +135,8 @@ textarea.EventCard__title__input {
 }
 .EventCard__action__button > .icon {
   display: none;
-  width: 25px;
-  height: 25px;
+  /* width: 25px;
+  height: 25px; */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -143,6 +153,14 @@ textarea.EventCard__title__input {
   color: #999;
   font-weight: 400;
 }
+.EventCard__action__button--save {
+  border-radius: 5px;
+  padding: 10px 25px;
+  background-color: dodgerblue;
+}
+.EventCard__action__button--save:active {
+  background-color: #1e88e5;
+}
 .EventCard__action__button--save > .text {
-  color: dodgerblue;
+  color: white;
 }
