--- a/src/components/Modal/ModalInstance/ModalInstance.css
+++ b/src/components/Modal/ModalInstance/ModalInstance.css
@@ -1,7 +1,8 @@
 .ModalInstance {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   position: fixed;
   top: 0px;
   left: 0px;
@@ -10,6 +11,12 @@
   z-index: 999999;
   visibility: hidden;
   opacity: 0;
+}
+.ModalInstance[data-align="top"] {
+  justify-content: flex-start;
+}
+.ModalInstance[data-align="bottom"] {
+  justify-content: flex-end;
 }
 .ModalInstance[data-visible="true"] {
   visibility: visible;
@@ -26,59 +33,57 @@
 
 .ModalInstance__bg {
   position: fixed;
+  z-index: 1;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
 }
-.ModalInstance__box {
-  position: relative;
-  width: 480px;
-  height: 100%;
-  min-height: 50px;
-  max-height: calc(100% - 10px);
-  margin: 5px 5px 5px 5px;
-  border-radius: 3px;
-  overflow: hidden;
-  z-index: 1;
-  transition: opacity 0.25s ease-in-out 0.15s,
-    transform 0.15s ease-in-out 0.15s;
-}
-.ModalInstance[data-visible="false"] .ModalInstance__box {
-  opacity: 0;
-  transform: translateY(-100px);
-}
-.ModalInstance[data-visible="true"] .ModalInstance__box {
-  opacity: 1.0;
-  transform: translateY(0px);
-}
-
-
 
 .ModalInstance__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-basis: 50px;
   position: relative;
+  width: calc(100% - 10px);
+  max-width: 480px;
   height: 50px;
-  background-color: dodgerblue;
+  margin: 5px 5px 0px 5px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #f5f5f5;
   z-index: 1;
+}
+
+.ModalInstance__header__title {
+  flex-basis: calc(100% - 35px);
+  color: #555555;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.25px;
+  word-spacing: 0.25px;
+  padding: 15px 0px 15px 25px;
 }
 
 .ModalInstance__header__close {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  flex-basis: 50px;
   width: 50px;
+  height: 100%;
+  opacity: 0.25;
   cursor: pointer;
 }
 .ModalInstance__header__close > .line {
   position: relative;
   width: 2px;
-  height: 20px;
-  background-color: #fff;
+  height: 15px;
+  background-color: #000000;
 }
 .ModalInstance__header__close > .line:nth-child(1) {
   left: 1px;
@@ -89,15 +94,39 @@
   transform: rotate(-45deg);
 }
 
-
-
-.ModalInstance__box__content {
+.ModalInstance__content {
   position: relative;
+  width: calc(100% - 10px);
+  max-width: 480px;
   height: auto;
   max-height: calc(100% - 50px);
+  margin: 0px 5px 5px 5px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   background-color: #fff;
+  overflow-x: hidden;
   overflow-y: auto;
   z-index: 1;
+}
+
+.ModalInstance[data-visible="false"] .ModalInstance__header,
+.ModalInstance[data-visible="false"] .ModalInstance__content {
+  transform: translateY(-50px);
+}
+.ModalInstance[data-align="bottom"][data-visible="false"] .ModalInstance__header,
+.ModalInstance[data-align="bottom"][data-visible="false"] .ModalInstance__content {
+  transform: translateY(50px);
+}
+.ModalInstance[data-visible="false"] .ModalInstance__header,
+.ModalInstance[data-visible="false"] .ModalInstance__content {
+  opacity: 0;
+  transition: opacity 0.25s ease-in-out 0s,
+    transform 0.25s ease-in-out 0.25s;
+}
+.ModalInstance[data-visible="true"] .ModalInstance__header,
+.ModalInstance[data-visible="true"] .ModalInstance__content {
+  transform: translateY(0px);
+  opacity: 1.0;
+  transition: opacity 0.25s ease-in-out 0s,
+    transform 0.25s ease-in-out 0s;
 }
