--- a/src/components/MenuBar/components/MenuBarItem/MenuBarItem.css
+++ b/src/components/MenuBar/components/MenuBarItem/MenuBarItem.css
@@ -24,6 +24,9 @@
   align-items: center;
   padding: 5px 25px;
 }
+.MenuBarItem--no-text > .holder {
+  padding: 5px 15px;
+}
 .MenuBarItem:not(:last-child) > .holder {
   box-shadow: 1px 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
@@ -32,17 +35,20 @@
 }
 .MenuBarItem__text {
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 400;
   letter-spacing: 0.5px;
   word-spacing: 0.5px;
   margin-top: 3px;
-  margin-left: 15px;
+  margin-left: 10px;
+}
+.MenuBarItem--no-icon .MenuBarItem__text {
+  margin-left: 0px;
 }
 .MenuBarItem__icon {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   background-color: transparent;
   background-size: cover;
   background-position: center;
