Replaced MenuBar with TableMenu

--- a/src/components/MembersList/MembersList.css
+++ b/src/components/MembersList/MembersList.css
@@ -1,91 +1,4 @@
 .MembersList {
-
+  padding: 0px 0px 50px 0px;
+  margin: 0px auto;
 }
-.MembersList__table {
-  max-width: 50%;
-  padding: 35px;
-  margin: -35px -25px 0px -25px;
-}
-
-.MembersList__table__thead {
-
-}
-.MembersList__table__tbody {
-
-}
-
-.MembersList__table__thead__tr,
-.MembersList__table__tbody__tr {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.MembersList__table__thead__tr {
-  padding: 5px 0px;
-}
-.MembersList__table__tbody__tr {
-  margin: 5px 0px;
-  border-radius: 5px;
-  background-color: #ffffff;
-}
-
-.MembersList__table__tbody__tr__content {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-basis: calc(100% - 50px);
-}
-.MembersList__table__thead__tr__selector,
-.MembersList__table__tbody__tr__selector {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 60px;
-  min-width: 60px;
-  height: 60px;
-}
-.MembersList__table__thead__tr__selector {
-  height: 0px;
-}
-.MembersList__table__tbody__tr .selector__icon {
-  width: 30px;
-  height: 30px;
-  border-radius: 5px;
-  background-color: #e5e5e5;
-  transform: scale(0.5);
-}
-.MembersList__table__tbody__tr[data-selected="true"] .selector__icon {
-  background-color: transparent;
-  background-image: url('./images/selected-icon.png');
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transform: scale(1.0);
-}
-
-.MembersList__table__thead__tr__td,
-.MembersList__table__tbody__tr__td {
-  flex-basis: 250px;
-  min-width: 250px;
-  font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
-}
-.MembersList__table__thead__tr__td {
-  font-size: 13px;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding: 0px 25px;
-  opacity: 0.5;
-}
-.MembersList__table__tbody__tr__td {
-  position: relative;
-  font-size: 18px;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-  padding: 20px 25px;
-}
-.MembersList__table__tbody__tr__td:nth-child(1) {
-  font-weight: 400;
-}
-
-
