--- a/src/components/Table/components/TableMenu/components/TableMenuItem/TableMenuItem.css
+++ b/src/components/Table/components/TableMenu/components/TableMenuItem/TableMenuItem.css
@@ -1,8 +1,8 @@
-.MenuBarItem {
+.TableMenuItem {
 
 }
 
-.MenuBarItem {
+.TableMenuItem {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,29 +11,29 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.MenuBarItem[data-active="false"] {
+.TableMenuItem[data-active="false"] {
   opacity: 0.25;
   cursor: default;
 }
-.MenuBarItem:not([data-active="false"]):hover {
+.TableMenuItem:not([data-active="false"]):hover {
   background-color: #f5f5f5;
 }
-.MenuBarItem > .holder {
+.TableMenuItem > .holder {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px 25px;
 }
-.MenuBarItem--no-text > .holder {
+.TableMenuItem--no-text > .holder {
   padding: 5px 15px;
 }
-.MenuBarItem:not(:last-child) > .holder {
+.TableMenuItem:not(:last-child) > .holder {
   box-shadow: 1px 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
-.MenuBarItem:hover > .holder {
+.TableMenuItem:hover > .holder {
   box-shadow: 1px 0px 0px 0px rgba(0, 0, 0, 0);
 }
-.MenuBarItem__text {
+.TableMenuItem__text {
   color: #000;
   font-size: 16px;
   font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
@@ -43,10 +43,10 @@
   margin-top: 3px;
   margin-left: 10px;
 }
-.MenuBarItem--no-icon .MenuBarItem__text {
+.TableMenuItem--no-icon .TableMenuItem__text {
   margin-left: 0px;
 }
-.MenuBarItem__icon {
+.TableMenuItem__icon {
   width: 20px;
   height: 20px;
   background-color: transparent;
@@ -54,18 +54,18 @@
   background-position: center;
   background-repeat: no-repeat;
 }
-.MenuBarItem__icon[data-icon="menu"] {
+.TableMenuItem__icon[data-icon="menu"] {
   background-image: url('../../images/menu-icon.png');
 }
-.MenuBarItem__icon[data-icon="add"] {
+.TableMenuItem__icon[data-icon="add"] {
   background-image: url('../../images/add-icon-filled-green.png');
 }
-.MenuBarItem__icon[data-icon="delete"] {
+.TableMenuItem__icon[data-icon="delete"] {
   background-image: url('../../images/delete-icon-filled-red.png');
 }
-.MenuBarItem__icon[data-icon="edit"] {
+.TableMenuItem__icon[data-icon="edit"] {
   background-image: url('../../images/edit-icon-filled-blue.png');
 }
-.MenuBarItem__icon[data-icon="filter"] {
+.TableMenuItem__icon[data-icon="filter"] {
   background-image: url('../../images/filter-icon.png');
 }
