--- a/src/components/Table/components/TableMenu/components/TableMenuItem/TableMenuItem.css
+++ b/src/components/Table/components/TableMenu/components/TableMenuItem/TableMenuItem.css
@@ -47,10 +47,10 @@
   margin-left: 0px;
 }
 .TableMenuItem__icon {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   background-color: transparent;
-  background-size: cover;
+  background-size: 20px auto;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -68,4 +68,7 @@
 }
 .TableMenuItem__icon[data-icon="filter"] {
   background-image: url('../../images/filter-icon.png');
+}
+.TableMenuItem__icon[data-icon="search"] {
+  background-image: url('../../images/search-icon.png');
 }
