Modified TableRow styles

--- a/src/components/Table/components/TableRow/TableRow.css
+++ b/src/components/Table/components/TableRow/TableRow.css
@@ -33,6 +33,7 @@
   height: 30px;
   transform: scale(0.35);
   filter: grayscale();
+  opacity: 0.75;
 }
 .TableRow[data-selected="false"] .TableRow__selector__icon {
   border-radius: 7px;
