--- a/src/components/Table/components/TableHead/TableHead.css
+++ b/src/components/Table/components/TableHead/TableHead.css
@@ -16,12 +16,15 @@
   min-width: 60px;
   height: 100%;
   cursor: pointer;
+  transition: filter 0.15s ease-in-out 0s,
+    opacity 0.15s ease-in-out 0s;
 }
 .TableHead__row__selector__icon {
   width: 25px;
   height: 25px;
   background-image: url('./images/select-icon.png');
-  background-size: contain;
+  background-size: 75% auto;
+  background-size: 100% auto;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -33,7 +36,7 @@
   filter: grayscale(0);
   opacity: 0.75;
 }
-.TableHead__row__selector:hover {
+.TableHead__row__selector:not([data-selected="true"]):hover {
   opacity: 0.5;
 }
 
