--- a/src/components/Table/components/TableRow/TableRow.css
+++ b/src/components/Table/components/TableRow/TableRow.css
@@ -1,7 +1,7 @@
 .TableRow {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   position: relative;
   margin: 10px 0px;
   border-radius: 5px;
@@ -69,7 +69,7 @@
 .TableRow__content {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   flex-basis: calc(100% - 50px);
 }
 .TableRow__cell {
